user controller changes and fixes
